@@ -8,22 +8,6 @@
 #include <lo/lo_osc_types.h>
 
 /**
- * \brief Return the storage size, in bytes, of the given argument.
- */
-size_t lo_arg_size(lo_type type, void *data);
-
-/**
- * \brief Given a raw OSC message, return the message path.
- *
- * \param data      A pointer to the raw OSC message data.
- * \param size      The size of data in bytes (total buffer bytes).
- *
- * Returns the message path or NULL if an error occurs.
- * Do not free() the returned pointer.
- */
-char *lo_get_path(void *data, ssize_t size);
-
-/**
  * \brief Validate raw OSC string data. Where applicable, data should be
  * in network byte order.
  *
@@ -75,23 +59,5 @@ ssize_t lo_validate_bundle(void *data, ssize_t size);
  * \param size      The size of data in bytes (total bytes remaining).
  */
 ssize_t lo_validate_arg(lo_type type, void *data, ssize_t size);
-
-/**
- * \brief Convert the specified argument to host byte order where necessary.
- *
- * \param type The OSC type of the data item (eg. LO_FLOAT).
- * \param data A pointer to the data item to be converted. It is changed
- * in-place.
- */
-void lo_arg_host_endian(lo_type type, void *data);
-
-/**
- * \brief Convert the specified argument to network byte order where necessary.
- *
- * \param type The OSC type of the data item (eg. LO_FLOAT).
- * \param data A pointer to the data item to be converted. It is changed
- * in-place.
- */
-void lo_arg_network_endian(lo_type type, void *data);
 
 #endif
