@@ -1,3 +1,6 @@
+2008-10-07  Stephen Sinclair <radarsat1@gmail.com>
+	* Move lo_arg_size(), lo_get_path(), lo_arg_host/network_endian() back to lo_lowlevel.h.
+
 2008-09-07  Kentaro Fukuchi <fukuchi@megaui.net>
 	* Memory leak in lo_address_new_from_url() has been fixed.
 	* Memory leak in dispatch_method() has been fixed.
